Notes following joint brainstorming session

--- a/draft2.tex
+++ b/draft2.tex
@@ -169,6 +169,52 @@ The convergence scores can be visualized as a single value over time, as shown o
 
 This approach is entirely data driven and does not depend on previous knowledge of the language being modelled or on a manually translated reference corpus. This will help remove previously existing limitations in the application of semantic models.
 
+\section{Notes}
+\begin{itemize}
+\item Add a clarification (definition) of what it means for two spaces to be equivalent:
+  \begin{itemize}
+  \item Relations in one space are preserved in the other
+  \item It is basically just a rotation
+  \end{itemize}
+   
+ \item "Known issues:" restructure (maybe into one thing)
+
+ \item  Pseudocode 
+ \begin{itemize}
+  \item Add picture (how would it look like)
+  \item Add intuitive / concrete example (using a word)
+ \end{itemize}
+
+ \item Separate repo for the code
+
+ \item Move "We use D(A,B)..." to Method section (together with clarification of definition above)
+ \item Add: we used CBOW (or skip gram)
+ 
+ \item Figure 2 
+ \begin{itemize}
+  \item density plot
+  \item xaxis should be No. sentences
+ \end{itemize}
+
+ \item Figure 3
+  \begin{itemize}
+  \item add axis No. sentences
+  \item add discussion "why is google score low"
+ \end{itemize}
+
+ \item Add in introduction why we do this more strongly
+
+ \item Venues:
+ \begin{itemize}
+  \item LREC
+  \item IEEE
+  \item NIPS
+  \item PR ?
+  \item http://cs.rochester.edu/~omidb/nlpcalendar/
+ \end{itemize}
+
+\end{itemize}
+
 \bibliographystyle{plain}
 \bibliography{shico}
 
