Use convergence over divergence - add refs

--- a/draft2.tex
+++ b/draft2.tex
@@ -49,13 +49,15 @@ We compare our method with existing word analogy tests and show how our method s
 
 \section{Intoduction}
 \label{sec:introduction}
-Since their introduction \cite{Mikolov_CS2013}, word embeddings have become increasingly popular and have been used for a wide range of applications \cite{Mikolov_CoRR2013, Kim_CoRR2014, Levy_CNLL2014, Cordeiro_ACL2016, Smith_ICLR2017}. Word embeddings are often trained using large data sets, such as the Google News corpus [https://code.google.com/archive/p/word2vec/], incorporating 100 billion words. The generally accepted approach when training word embeddings is the more data, the better, and there does not appear to be any consensus on the minimum amount of data required to train a word embedding model which yields good results. A widely accepted method for evaluating word embeddings is by testing their performance in analogy tests: \textit{man : woman :: king : \textbf{queen}}. Data sets for testing analogies are widely available (see \url{https://www.aclweb.org/aclwiki/index.php?title=Google_analogy_test_set_(State_of_the_art)}). However there are several known issues with such tests \cite{Speer_Blog2016}:
+Since their introduction \cite{Mikolov_CS2013}, word embeddings have become increasingly popular and have been used for a wide range of applications \cite{Mikolov_CoRR2013, Kim_CoRR2014, Levy_CNLL2014, Cordeiro_ACL2016, Smith_ICLR2017}. Word embeddings are often trained using large data sets, such as the Google News corpus\footnote{\url{https://code.google.com/archive/p/word2vec/}}, incorporating 100 billion words. The generally accepted approach when training word embeddings is the more data, the better, and there does not appear to be any consensus on the minimum amount of data required to train a word embedding model which yields good results. A widely accepted method for evaluating word embeddings is by testing their performance in analogy tests: \textit{man : woman :: king : \textbf{queen}}. Data sets for testing analogies are widely available\footnote{See \url{https://aclweb.org/aclwiki/State_of_the_art}}. However there are several known issues with such tests \cite{Speer_Blog2016}:
 
 \begin{itemize}
  \item \textbf{Language specific} - analogies are usually language specific -- training a word embedding model on a language different from that of the analogies will obviously lead to failing the test;
  \item \textbf{Domain specific} - analogies usually fall in a particular knowledge category. For instance the following analogy: \textit{Athens : Greece :: Baghdad : Iraq}, is specific to Geographical facts; a semantic model trained on a data set which does not contain such knowledge (which never mentions these locations) is bound to fail this test. At the same time, a word embedding may have already learnt a domain specific analogy, such as \textit{electron : electricity :: photon : light}, but if this analogy is not reflected on the analogy test set, there is no way to know the semantic model already incorporates this knowledge;
  \item \textbf{Constrained by vocabulary} - because word embeddings typically have a set vocabulary; analogies which use out-of-vocabulary words, will always fail. Domain and language specific issues can be considered specific instances of constrained vocabulary issues.
 \end{itemize}
+
+Furthermore, recent criticisms question the suitability of semantic models to capture the relations in the language \cite{Hellrich_COLING2016}. However the quality measures proposed there are still language specific and thus suffer from the same limitations.
 
 These issues can be addressed, for instance, by translating the analogy test sets, discarding analogies which are irrelevant for the data being used, constructing analogies suitable for a domain, etc. However all of these approaches are labour intensive and must be hand crafted for each training data set. This work is motivated by the desire to find a data-driven method to validate word embeddings. The data-driven method introduced here does not rely on the vocabulary and thus does not require translation or creation of new test sets in order to function. This makes our approach effectively language independent.
 
@@ -76,7 +78,7 @@ Any given word $w$ in the vocabulary can be represented in \textit{vocabulary sp
 
 $$e_w = S \cdot w$$
 
-where vector $e_w$ is of size $N$. Words which have similar meaning will be located close by in this semantic space [\textbf{TODO: ref paper found by Janneke here}]. Word similarity is usually measured using cosine similarity [ref?]. The semantic model learns the structure of the semantic space by analysing sentences in the corpus and updating the $S$ matrix.
+where vector $e_w$ is of size $N$. Words which have similar meaning will be located close by in this semantic space. As pointed in \cite{Hellrich_COLING2016}, such relations are questionable for low quality models, however we work with the assumption that larger volumes of data will provide sufficient quality models for these relations to be reasonably meaningful. Word similarity is usually measured using cosine similarity \cite{Kim_CoRR2014}. The semantic model learns the structure of the semantic space by analysing sentences in the corpus and updating the $S$ matrix.
 
 We are interested in finding a matrix $S$ which is a good representation of our data. As we add more data to our semantic model, there will be different versions of $S$ changing over time: $S_1$, $S_2, ..., S_t$. By measuring the amount of change between any two consecutive models, $M_{i-1}$ and $M_i$, we can know how much the model needed to adapt to between $t=i-i$ and $t=i$ to fit the new data presented to the model. As some point in time $t=t^\ast$, the difference between the two models, $M_{t^\ast-1}$ and $M_t^\ast$, will be small enough that we can consider the two models to be equivalent.
 
@@ -114,11 +116,11 @@ Figure \ref{fig:transform} depicts how the transformation matrix is built.
  \label{fig:transform}
 \end{figure}
 
-We will use the transformation $T$ to measure how much the embedded space has changed between times $A$ and $B$. To ensure that our measure is symmetric, we will calculate two transformation matrices, $T(A,B)$ to go from $A$ to $B$ and $T(B,A)$ to go from $B$ to $A$. We call the element-wise product of these two matrices the divergence matrix:
+We will use the transformation $T$ to measure how much the embedded space has changed between times $A$ and $B$. To ensure that our measure is symmetric, we will calculate two transformation matrices, $T(A,B)$ to go from $A$ to $B$ and $T(B,A)$ to go from $B$ to $A$. We call the element-wise product of these two matrices the convergence matrix:
 
 $$D(A,B) = T(A,B) * T(B,A)$$
 
-It is important to mention that the divergence matrix will be equal the identity matrix if the space embeddings $S_A$ and $S_B$ are equivalent \footnote{have we defined what do we mean by equivalent?}. This follows from the fact that $T(X,Y)$ will be be the identity when $X$ and $Y$ are equivalent. Therefore, given $A$ and $B$ are equivalent, $T(A,B)$ and $T(B,A)$ will both be the identity, and thus $D(A,B) = T(A,B) * T(B,A)$ will also be the identity. \textbf{NOTE: think / check if the element-wise multiplication makes sense, as pointed out by Patrick.}
+It is important to mention that the convergence matrix will be equal the identity matrix if the space embeddings $S_A$ and $S_B$ are equivalent \footnote{have we defined what do we mean by equivalent?}. This follows from the fact that $T(X,Y)$ will be be the identity when $X$ and $Y$ are equivalent. Therefore, given $A$ and $B$ are equivalent, $T(A,B)$ and $T(B,A)$ will both be the identity, and thus $D(A,B) = T(A,B) * T(B,A)$ will also be the identity. \textbf{NOTE: think / check if the element-wise multiplication makes sense, as pointed out by Patrick.}
 
 We use $D(A,B)$ measure the change in the semantic space in two different ways:
 
@@ -127,13 +129,13 @@ We use $D(A,B)$ measure the change in the semantic space in two different ways:
 
 \section{Experiments}
 \label{sec:experiments}
-In this section we describe the experimental process we have followed to validate our approach. For this experiment we used the Times news paper archives (\textbf{I need to ask Jose how can we reference the corpus}) between 1900 and 1980. We trained a semantic model, using gensim word2vec implementation, using CBOW [ref]. We set the dimensions on the semantic space to 300 ($N = 300$).
+In this section we describe the experimental process we have followed to validate our approach. For this experiment we used the Times news paper archives (\textbf{I need to ask Jose how can we reference the corpus}) between 1900 and 1980. We trained a semantic model, using gensim word2vec implementation, using CBOW. We set the dimensions on the semantic space to 300 ($N = 300$).
 
-The vocabulary was limited to use a maximum of 1GB of memory; further, \textit{nltk} was used to remove non-words and stop-words [ref nltk]. The resulting models had a maximum vocabulary size of 22,000 words. Notice that stop-word removal yielded a better final model with our data, but it does not affect the calculation of the divergence matrix.
+The vocabulary was limited to use a maximum of 1GB of memory; further, \textit{nltk} was used to remove non-words and stop-words \cite{Bird_NLP2009}. The resulting models had a maximum vocabulary size of 22,000 words. Notice that stop-word removal yielded a better final model with our data, but it does not affect the calculation of the convergence matrix.
 
 We used batches of 10,000 sentences taken from randomly selected years in the corpus. After each batch is added to the model being trained, a snapshot of the embedding is taken. We continue to feed batches to the model until it has been trained with 10 million sentences.
 
-We use $D(A,B)$ to compare snapshots. For comparison, we also use the Google "questions-words" analogy data set [ref]. It should be mentioned that some of the analogy tests failed for every one of our trained models because some words in those tests were not present in our corpus (more specifically, they were not present with enough frequency to be part of the vocabulary in our models). For example, even after training with 10 million sentences, our model fails for the analogy: \textit{London : England :: Montevideo : Uruguay}. This is however not surprising as \textit{Montevideo} appears only a 87 times in the first million sentences (for reference, London appears in 21,000 sentences). Notice that the proposed measure calculates the difference between two embeddings, while the question words evaluates the individual accuracy of a given model.
+We use $D(A,B)$ to compare snapshots. For comparison, we also use the Google "questions-words" analogy data set \cite{Mikolov_CS2013}\footnote{\url{https://aclweb.org/aclwiki/Google_analogy_test_set_(State_of_the_art)}}. It should be mentioned that some of the analogy tests failed for every one of our trained models because some words in those tests were not present in our corpus (more specifically, they were not present with enough frequency to be part of the vocabulary in our models). For example, even after training with 10 million sentences, our model fails for the analogy: \textit{London : England :: Montevideo : Uruguay}. This is however not surprising as \textit{Montevideo} appears only a 87 times in the first million sentences (for reference, London appears in 21,000 sentences). Notice that the proposed measure calculates the difference between two embeddings, while the question words evaluates the individual accuracy of a given model.
 
 \section{Results}
 \label{sec:results}
